# kopete-lwqq

./: .gitignore  CMakeLists.txt  INSTALL  README.md  config.h.in  kopete_webqq.desktop  qq_types.cpp  qq_types.h  qqaccount.cpp  qqaccount.h  qqaccountpreferences.ui  qqaddcontactpage.cpp  qqaddcontactpage.h  qqaddui.ui  qqbridgecallback.cpp  qqbridgecallback.h  qqchatsession.cpp  qqchatsession.h  qqchatui.rc  qqcontact.cpp  qqcontact.h  qqdiscuchatsession.cpp  qqdiscuchatsession.h  qqdiscuui.rc  qqeditaccountwidget.cpp  qqeditaccountwidget.h  qqfakeserver.cpp  qqfakeserver.h  qqgroupchatsession.cpp  qqgroupchatsession.h  qqgroupui.rc  qqloginverifywidget.cpp  qqloginverifywidget.h  qqprotocol.cpp  qqprotocol.h  qqshowgetinfo.cpp  qqshowgetinfo.h  qquserinfoform.cpp  qquserinfoform.h  qquserinfoform.ui  (+2 more)
icons/: CMakeLists.txt
ui/: qqwebcamdialog.cpp  qqwebcamdialog.h
